# HikariTracing

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  shell.nix
img/input/: huaji.jpeg~
include/OneWeekend/: Camera.h  GlobUtil.hpp  GraphicObjects.h  ImageUtil.h  Material.h  MathUtil.h
include/Raytracing/: Camera.h  GlobUtil.hpp  GpuRenderer.h  GraphicObjects.h  ITexture.h  ImageUtil.h  Material.h  MathUtil.h  Texture.h  scenes.h
include/Raytracing/metal/: DeviceManager.cpp  DeviceManager.h
src/: Camera.cpp  GpuRenderer.cpp  GraphicObjects.cpp  ITexture.cpp  ImageUtil.cpp  Material.cpp  MathUtil.cpp  Texture.cpp  main.cpp  scenes.cpp
src/metal/: DeviceManager.cpp  main.cpp
